[package]
name = "rustq"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"

hwfq = { git = "https://github.com/akshayknarayan/hwfq", branch="logging_changes",features = ["drr-argparse", "htb-argparse"] }
tracing-subscriber = "0.3"
tracing = "0.1"
eyre = "0.6.12"
quanta = "0.12.5"
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
etherparse = "0.14"
